--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
         "core-js": "^3.8.3",
         "vue": "^3.2.38",
         "vue-router": "^4.1.5",
-        "yarn": "^1.22.19",
-        "vite": "^3.0.9",
-        "vitest": "^0.23.0"
+        "yarn": "^1.22.19"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
@@ -27,7 +25,10 @@
         "@vue/cli-plugin-eslint": "~5.0.0",
         "@vue/cli-service": "~5.0.0",
         "eslint": "^7.32.0",
-        "eslint-plugin-vue": "^8.0.3"
+        "eslint-plugin-vue": "^8.0.3",
+        "sass": "^1.56.0",
+        "vite": "^3.0.9",
+        "vitest": "^0.23.0"
     },
     "eslintConfig": {
         "root": true,
