--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@popperjs/core": "^2.11.6",
         "bootstrap": "^5.2.2",
         "core-js": "^3.8.3",
+	"oidc-client-ts": "^2.1.0",
         "vue": "^3.2.38",
         "vue-router": "^4.1.5",
         "yarn": "^1.22.19"
