--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -11,13 +11,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set up QEMU
+    -
+      name: Set up QEMU
       uses: docker/setup-qemu-action@v2
-
-    - name: Set up Docker Buildx
+    -
+      name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-
-    - name: Login to DockerHub
+    -
+      name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
@@ -28,18 +29,17 @@ jobs:
       uses: docker/metadata-action@v4
       with:
         images: |
-          bbmrieric/negotiator
+          bbmrieric/negotiator-frontend
         tags: |
           type=ref,event=branch
           type=ref,event=pr
           type=semver,pattern={{version}}
           type=semver,pattern={{major}}.{{minor}}
           type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
-
-    - name: Build and push
+    -
+      name: Build and push
       uses: docker/build-push-action@v3
       with:
-        context: .
         platforms: linux/amd64,linux/arm64
         push: true
         labels: ${{ steps.meta.outputs.labels }}
