--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -54,6 +54,7 @@ jobs:
       name: Build and push
       uses: docker/build-push-action@v3
       with:
+        context: .
         platforms: linux/amd64,linux/arm64
         push: true
         labels: ${{ steps.meta.outputs.labels }}
