--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -11,6 +11,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+        cache: 'yarn'
+
+    - name: Install project dependencies
+      run: yarn --prefer-offline
+
+    - name: Build
+      run: yarn install && yarn build && ls -a
     -
       name: Set up QEMU
       uses: docker/setup-qemu-action@v2
@@ -40,6 +54,7 @@ jobs:
       name: Build and push
       uses: docker/build-push-action@v3
       with:
+        context: .
         platforms: linux/amd64,linux/arm64
         push: true
         labels: ${{ steps.meta.outputs.labels }}
