--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.0",
+        "@fortawesome/fontawesome-svg-core": "^6.2.0",
+        "@fortawesome/free-solid-svg-icons": "^6.2.0",
+        "@fortawesome/vue-fontawesome": "^3.0.2",
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.3",
         "bootstrap": "^5.2.2",
