--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -55,6 +55,8 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: .
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
         platforms: linux/amd64,linux/arm64
         push: true
         labels: ${{ steps.meta.outputs.labels }}
