--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/vue-fontawesome": "^3.0.2",
         "@popperjs/core": "^2.11.6",
+        "@vue/test-utils": "^2.2.7",
         "axios": "^1.1.3",
         "bootstrap": "^5.2.2",
         "core-js": "^3.8.3",
@@ -35,6 +36,7 @@
         "@vue/cli-service": "~5.0.0",
         "eslint": "^7.32.0",
         "eslint-plugin-vue": "^8.0.3",
+        "jsdom": "^21.0.0",
         "sass": "^1.56.0",
         "vite": "^3.0.9",
         "vitest": "^0.23.0"
