WIP: request is performed using a wizard

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "oidc-client-ts": "^2.1.0",
         "vue": "^3.2.38",
         "vue-router": "^4.1.5",
+        "vue3-form-wizard": "^0.1.8",
         "vuex": "^4.0.2",
         "vuex-router-sync": "^5.0.0",
         "yarn": "^1.22.19"
