--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "axios": "^1.1.3",
         "bootstrap": "^5.2.2",
         "core-js": "^3.8.3",
+        "dotenv": "^16.0.3",
         "http-server": "^14.1.1",
         "oidc-client-ts": "^2.1.0",
+        "sass-loader": "^13.2.0",
         "vue": "^3.2.38",
         "vue-router": "^4.1.5",
         "vuex": "^4.0.2",
