--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-router": "^4.1.5",
         "vue3-form-wizard": "^0.1.8",
         "vuex": "^4.0.2",
+        "vuex-oidc": "^4.0.2",
         "vuex-router-sync": "^5.0.0",
         "yarn": "^1.22.19"
     },
