--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
         "@vue/test-utils": "^2.2.7",
         "axios": "^1.1.3",
         "bootstrap": "^5.2.2",
+        "bootstrap-vue-next": "^0.8.3",
         "core-js": "^3.8.3",
         "dotenv": "^16.0.3",
         "http-server": "^14.1.1",
         "oidc-client-ts": "^2.1.0",
         "sass-loader": "^13.2.0",
-        "vue": "^3.2.38",
+        "vue": "^3.2.47",
         "vue-router": "^4.1.5",
         "vue3-form-wizard": "^0.1.8",
         "vuex": "^4.0.2",
@@ -42,6 +43,7 @@
         "eslint-plugin-vue": "^8.0.3",
         "jsdom": "^21.0.0",
         "sass": "^1.56.0",
+        "unplugin-vue-components": "^0.24.1",
         "vite": "^3.0.9",
         "vitest": "^0.23.0"
     },
