--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,38 +1,35 @@
-name: Docker Image CI
+name: CI pipeline
 
 on:
+  schedule:
+    - cron: '0 10 * * *' # every day at 10am
   push:
+    branches:
+      - master
+    tags:
+      - 'v*.*.*'
+  pull_request:
+    branches:
+      - master
 
 
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
 
     steps:
+
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-        cache: 'yarn'
-
-    - name: Install project dependencies
-      run: yarn --prefer-offline
-
-    - name: Build
-      run: yarn install && yarn build && ls -a
-    -
-      name: Set up QEMU
+    - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
-    -
-      name: Set up Docker Buildx
+
+    - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-    -
-      name: Login to Docker Hub
+
+    - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USER }}
@@ -50,8 +47,8 @@ jobs:
           type=semver,pattern={{version}}
           type=semver,pattern={{major}}.{{minor}}
           type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
-    -
-      name: Build and push
+
+    - name: Build and push
       uses: docker/build-push-action@v3
       with:
         context: .
