Fix workfloww trigger

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,12 +5,12 @@ on:
     - cron: '0 10 * * *' # every day at 10am
   push:
     branches:
-      - master
+      - main
     tags:
       - 'v*.*.*'
   pull_request:
     branches:
-      - master
+      - main
 
 
 jobs:
