Cleanup nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@
     listen 8080;
     server_name localhost;
     root /app;
-    index index.html index.htm;
+    index index.html;
 
     gzip on;
     gzip_min_length 1000;
