feat: Starts implementing page for negotiation details and post list

--- a/oidc_mock/docker-compose.yml
+++ b/oidc_mock/docker-compose.yml
@@ -88,7 +88,7 @@ services:
               },
               {
                 "Type": "preferred_username",
-                "Value": "theBiobanker",
+                "Value": "TheBiobanker",
                 "ValueType": "string"
               },
               {
