--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "core-js": "^3.8.3",
         "dotenv": "^16.0.3",
         "http-server": "^14.1.1",
+        "moment": "^2.29.4",
         "oidc-client-ts": "^2.1.0",
         "sass-loader": "^13.2.0",
         "vue": "^3.2.47",
