feat: Adds the associated collections to the biobanker user

--- a/oidc_mock/docker-compose.yml
+++ b/oidc_mock/docker-compose.yml
@@ -98,7 +98,7 @@ services:
               },
               {
                 "Type": "eduperson_entitlement",
-                "Value": "[\"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:negotiator_v3:researchers#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:negotiator_v3:biobankers#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:bbmri-eric.ID.SE_890.collection.dummy_collection#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:bbmri-eric.ID.CZ_MMCI.collection.LTS#perun.bbmri-eric.eu\"]",
+                "Value": "[\"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:bbmri-eric:ID:CZ_MMCI:collection:LTS#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:bbmri-eric.ID.SE_890.collection.dummy_collection#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:negotiator_v3:researchers#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:negotiator_v3:biobankers#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:biobank.1.collection.2#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:biobank.1.collection.1#perun.bbmri-eric.eu\"]",                
                 "ValueType": "json"
               }
             ]
