WIP: Mixed private and public posts

--- a/oidc_mock/docker-compose.yml
+++ b/oidc_mock/docker-compose.yml
@@ -98,7 +98,44 @@ services:
               },
               {
                 "Type": "eduperson_entitlement",
-                "Value": "[\"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:bbmri-eric:ID:CZ_MMCI:collection:LTS#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:bbmri-eric.ID.SE_890.collection.dummy_collection#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:negotiator_v3:researchers#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:negotiator_v3:biobankers#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:biobank.1.collection.2#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:biobank.1.collection.1#perun.bbmri-eric.eu\"]",                
+                "Value": "[\"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:bbmri-eric.ID.SE_890.collection.dummy_collection#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:negotiator_v3:researchers#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:negotiator_v3:biobankers#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:biobank.1.collection.2#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:biobank.1.collection.1#perun.bbmri-eric.eu\"]",                
+                "ValueType": "json"
+              }
+            ]
+          },
+          {
+            "SubjectId":"1003@bbmri.eu",
+            "Username":"Repr",
+            "Password":"repr",
+            "Claims": [
+              {
+                "Type": "name",
+                "Value": "Sarah Representative",
+                "ValueType": "string"
+              },
+              {
+                "Type": "given_name",
+                "Value": "Sarah",
+                "ValueType": "string"
+              },
+              {
+                "Type": "family_name",
+                "Value": "Representative",
+                "ValueType": "string"
+              },
+              {
+                "Type": "preferred_username",
+                "Value": "SarahRepr",
+                "ValueType": "string"
+              },
+              {
+                "Type": "email",
+                "Value": "sarah.repr@biobank.eu",
+                "ValueType": "string"
+              },
+              {
+                "Type": "eduperson_entitlement",
+                "Value": "[\"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:bbmri-eric:ID:CZ_MMCI:collection:LTS#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:negotiator_v3:researchers#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:negotiator_v3:biobankers#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:biobank.1.collection.2#perun.bbmri-eric.eu\", \"urn:geant:bbmri-eric.eu:group:bbmri:collections:BBMRI-ERIC%20Directory:biobank.1.collection.1#perun.bbmri-eric.eu\"]",                
                 "ValueType": "json"
               }
             ]
