ci: fix container publishing

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,7 +36,7 @@ jobs:
           bbmrieric/negotiator-frontend
         tags: |
           type=ref,event=branch
-          type=ref,event=pr
+          type=raw,value=${{ github.head_ref }},event=pr
           type=semver,pattern={{version}}
           type=semver,pattern={{major}}.{{minor}}
           type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -45,7 +45,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: .
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm64
         push: true
         labels: ${{ steps.meta.outputs.labels }}
         tags: ${{ steps.meta.outputs.tags }}
