--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "oidc-client-ts": "^2.1.0",
     "sass-loader": "^13.2.0",
     "vue": "^3.2.47",
+    "vue-matomo": "^4.2.0",
     "vue-router": "^4.1.5",
     "vue3-form-wizard": "^0.1.8",
     "vuex": "^4.0.2",
