feat: load scss files

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@
       add_header X-Content-Type-Options nosniff;
     }
 
-    location ~ \.(css|js)$ {
+    location ~ \.(css|js|scss)$ {
       expires max;
       add_header Cache-Control "public";
       add_header X-Content-Type-Options nosniff;
