--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.8.3",
     "dotenv": "^16.0.3",
     "http-server": "^14.1.1",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "oidc-client-ts": "^2.1.0",
     "sass-loader": "^13.2.0",
