--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "@popperjs/core": "^2.11.6",
+    "@vue/eslint-config-standard": "^8.0.1",
     "@vue/test-utils": "^2.2.7",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
