--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-matomo": "^4.2.0",
     "vue-router": "^4.1.5",
     "vue3-form-wizard": "^0.1.8",
+    "vue3-tour": "^0.3.4",
     "vuex": "^4.0.2",
     "vuex-oidc": "^4.0.2",
     "vuex-router-sync": "^5.0.0",
