--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "bootstrap-vue-next": "^0.8.10",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
     "git-rev-sync": "^3.0.2",
     "http-server": "^14.1.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "jszip": "^3.10.1",
     "moment": "^2.29.4",
     "oidc-client-ts": "^2.1.0",
     "sass-loader": "^13.2.0",
