--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.11.1",
     "bootstrap-vue-next": "^0.8.10",
+    "chart.js": "^4.4.3",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.3",
     "git-rev-sync": "^3.0.2",
@@ -31,6 +32,7 @@
     "oidc-client-ts": "^2.1.0",
     "sass-loader": "^13.2.0",
     "vue": "^3.2.47",
+    "vue-chartjs": "^5.3.1",
     "vue-matomo": "^4.2.0",
     "vue-router": "^4.1.5",
     "vue3-form-wizard": "^0.1.8",
