--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "cy:run": "cypress run",
+    "cy:run:chrome": "cypress run --browser chrome",
+    "cy:run:firefox": "cypress run --browser firefox",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
@@ -47,6 +51,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "cypress": "^13.14.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jsdom": "^21.0.0",
