--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Wait for OIDC provider
         run: .github/scripts/wait_for_url.sh  http://localhost:4011/.well-known/openid-configuration
 
-      - name: yarn cypress run --browser chrome
+      - name: Run tests
+        run: yarn cypress run --browser chrome
 
 
   build:
