--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,8 +35,7 @@ jobs:
     needs: install
     strategy:
       matrix:
-        browser: [chrome, firefox]
-        fail-fast: false
+        browser: ["chrome", "firefox"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
