--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,6 +58,12 @@ jobs:
           start: yarn dev
           browser: ${{ matrix.browser }}
 
+      - uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: ./cypress/screenshots
+
 
   build:
     runs-on: ubuntu-latest
