--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,7 +36,7 @@ jobs:
     name: E2E Tests
     strategy:
       matrix:
-        browser: ["chrome", "firefox"]
+        browser: ["firefox"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
