--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,7 +33,7 @@ jobs:
     name: E2E Tests
     strategy:
       matrix:
-        browser: ["chrome", "firefox"]
+        browser: ["chrome", "electron"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
