--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "cypress": "^13.14.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
