--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,15 +26,72 @@ jobs:
           name: build
           if-no-files-found: error
           path: node_modules
+  build:
+    runs-on: ubuntu-latest
 
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            bbmrieric/negotiator-frontend
+          tags: |
+            type=ref,event=branch
+            type=raw,value=${{ github.head_ref }},event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=min
+
+      - name: Upload image
+        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4
+        with:
+          name: negotiator-frontend
+          path: /tmp/negotiator-frontend.tar
   test:
     runs-on: ubuntu-latest
-    needs: install
+    needs: [install, build]
     name: E2E Tests
     strategy:
       matrix:
         browser: ["chrome", "electron"]
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
+        with:
+          name: negotiator-frontend
+          path: /tmp
+
+      - name: Load image
+        run: docker load --input /tmp/negotiato-frontend.tar
+
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -57,10 +114,8 @@ jobs:
           distribution: 'temurin'
 
       - name: Setup OIDC Server
-        run: cd oidc_mock && docker compose up -d
-
-      - name: Setup API server
-        run: cd negotiator && mvn -B clean spring-boot:test-run -Dspring-boot.run.profiles=dev &
+        working-directory: negotiator
+        run: docker compose up -d
 
       - name: Wait
         run: sleep 30
@@ -68,7 +123,6 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          start: yarn dev
           browser: ${{ matrix.browser }}
 
       - uses: actions/upload-artifact@v4
@@ -78,46 +132,4 @@ jobs:
           path: ./cypress/screenshots
 
 
-  build:
-    runs-on: ubuntu-latest
 
-    steps:
-
-    - name: Checkout
-      uses: actions/checkout@v4
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USER }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Docker meta
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: |
-          bbmrieric/negotiator-frontend
-        tags: |
-          type=ref,event=branch
-          type=raw,value=${{ github.head_ref }},event=pr
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
-
-    - name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        platforms: linux/amd64,linux/arm64
-        push: true
-        labels: ${{ steps.meta.outputs.labels }}
-        tags: ${{ steps.meta.outputs.tags }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=min
