--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -69,29 +69,15 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=min
-          outputs: type=docker,dest=/tmp/negotiator-frontend.tar
 
-      - name: Upload image
-        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4
-        with:
-          name: negotiator-frontend
-          path: /tmp/negotiator-frontend.tar
   test:
     runs-on: ubuntu-latest
-    needs: [install, build]
+    needs: install
     name: E2E Tests
     strategy:
       matrix:
         browser: ["chrome", "electron"]
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
-        with:
-          name: negotiator-frontend
-          path: /tmp
-
-      - name: Load image
-        run: docker load --input /tmp/negotiato-frontend.tar
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -114,7 +100,22 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Setup OIDC Server
+      - name: Checkout codebase
+        uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@49b3bc8e6bdd4a60e6116a5414239cba5943d3cf # v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3
+
+      - name: Build and push
+        uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6
+        with:
+          context: .
+          tags: bbmrieric/negotiator-frontend:latest
+
+      - name: Setup Testing Environment
         working-directory: negotiator
         run: docker compose up -d
 
