ci: setup testing through docker

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,49 +26,6 @@ jobs:
           name: build
           if-no-files-found: error
           path: node_modules
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            bbmrieric/negotiator-frontend
-          tags: |
-            type=ref,event=branch
-            type=raw,value=${{ github.head_ref }},event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          labels: ${{ steps.meta.outputs.labels }}
-          tags: ${{ steps.meta.outputs.tags }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=min
 
   test:
     runs-on: ubuntu-latest
@@ -78,7 +35,6 @@ jobs:
       matrix:
         browser: ["chrome", "electron"]
     steps:
-
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -100,20 +56,8 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@49b3bc8e6bdd4a60e6116a5414239cba5943d3cf # v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@c47758b77c9736f4b2ef4073d4d51994fabfe349 # v3
-
-      - name: Build and push
-        uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6
-        with:
-          context: .
-          tags: bbmrieric/negotiator-frontend:latest
-
-      - name: Setup Testing Environment
-        run: cd negotiator && docker compose up -d
+      - name: Setup API server
+        run: cd negotiator && docker compose up -d negotiator oidc-server-mock
 
       - name: Wait
         run: sleep 30
@@ -121,6 +65,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
+          start: yarn dev
           browser: ${{ matrix.browser }}
 
       - uses: actions/upload-artifact@v4
@@ -130,4 +75,46 @@ jobs:
           path: ./cypress/screenshots
 
 
+  build:
+    runs-on: ubuntu-latest
 
+    steps:
+
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USER }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: |
+          bbmrieric/negotiator-frontend
+        tags: |
+          type=ref,event=branch
+          type=raw,value=${{ github.head_ref }},event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        platforms: linux/amd64, linux/arm64
+        push: true
+        labels: ${{ steps.meta.outputs.labels }}
+        tags: ${{ steps.meta.outputs.tags }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=min
