--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,21 +4,6 @@ on:
     - cron: '0 10 * * *' # every day at 10am
   push:
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22.11.0'
-          cache: 'yarn'
-
-      - name: Lint
-        run: yarn eslint src
-
   install:
     runs-on: ubuntu-latest
 
@@ -41,6 +26,24 @@ jobs:
           name: build
           if-no-files-found: error
           path: node_modules
+  lint:
+    runs-on: ubuntu-latest
+    needs: install
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.11.0'
+          cache: 'yarn'
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Lint
+        run: yarn eslint src
 
   test:
     runs-on: ubuntu-latest
