chore: Dockerfile style

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -135,4 +135,4 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         tags: ${{ steps.meta.outputs.tags }}
         cache-from: type=gha
-        cache-to: type=gha,mode=max
+        cache-to: type=gha,mode=max,inline=true
