--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "negotiator-v3-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint": "eslint . --fix",
+    "format": "prettier --write src/",
     "cy:run": "cypress run",
     "cy:run:chrome": "cypress run --browser chrome",
     "cy:run:firefox": "cypress run --browser firefox",
@@ -19,7 +21,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "@popperjs/core": "^2.11.6",
-    "@vue/eslint-config-standard": "^8.0.1",
     "@vue/test-utils": "^2.2.7",
     "axios": "^1.7.4",
     "bootstrap": "^5.2.2",
@@ -47,28 +48,20 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "^5.0.8",
+    "@vue/eslint-config-prettier": "^10.1.0",
     "cypress": "^13.14.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint": "^9.16.0",
+    "eslint-plugin-cypress": "^4.1.0",
+    "eslint-plugin-vue": "^9.30.0",
     "jsdom": "^21.0.0",
+    "prettier": "^3.3.3",
     "sass": "^1.69.5",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^3.2.10",
     "vitest": "^0.23.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "rules": {}
   },
   "browserslist": [
     "> 1%",
