--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.11.1",
     "bootstrap-vue-next": "^0.8.10",
+    "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.3",
     "git-rev-sync": "^3.0.2",
@@ -37,6 +39,7 @@
     "pinia-oidc": "^1.0.10",
     "sass-loader": "^13.2.0",
     "vue": "^3.2.47",
+    "vue-chartjs": "^5.3.2",
     "vue-matomo": "^4.2.0",
     "vue-router": "^4.1.5",
     "vue3-form-wizard": "^0.1.8",
